[package]
name = "reddish"
version = "0.11.0"
edition = "2021"

[dependencies]
rust_mruby =  { package = "rust-mruby", path = "rust-mruby", features = ["build"] }
rustyline = "9.0.0"
nix = "0.24.1"
is_executable = "1.0.1"
cfg-if = "1.0.0"
clap = "~2.33.3"
signal-hook = { version = "0.3.10", features = ["channel", "iterator", "extended-siginfo"] }
once_cell = "1.8.0"
dirs = "4.0"

[dev-dependencies]
mockall = "0.11.0"
