[package]
name = "reddish"
version = "0.11.0"
edition = "2021"

[dependencies]
rust_mruby =  { package = "rust-mruby", path = "rust-mruby", features = ["build"] }
rustyline = "9.0.0"
nix = "0.24.1"
is_executable = "1.0.1"
cfg-if = "1.0.0"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
signal-hook = { version = "0.3.10", features = ["channel", "iterator", "extended-siginfo"] }
once_cell = "1.8.0"
dirs = "4.0"
mockall = "0.11.0"
mockall_double = "0.2.1"
