[package]
name = "rbsh_parser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.1"

[features]
trace = ["peg/trace"]

[dev-dependencies]
criterion = "0.4"
indoc = "1.0.8"
paste = "1.0.11"
pretty_assertions = "1.3.0"
rustyline = "10.1.1"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "repl"
